Changed scrollbar look, added posibility to create tasks and some fixes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,27 @@
+.hideScrollbar {
+    scrollbar-width: none;
+}
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: lightgray;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: gray; 
+}
+
 .expandSidebar {
     width: 16rem;
     transition: width 0.2s ease-out;
